# RawTherapee

./: .clang-format  .gitignore  .hgignore  .travis.yml  .travis.yml.fixme  AUTHORS.txt  About-Apple.cmake  About-Linux.cmake  About-Windows.cmake  AboutThisBuild.cmake  AboutThisBuild.txt  AboutThisBuild.txt.in  CAVEATS.txt  CMakeLists.txt  COMPILE.txt  CONTRIBUTING.md  FindFreeImage.cmake  LICENSE  LICENSE.txt  Makefile.am  Makefile.mingw  ProcessorTargets.cmake  README.md  RELEASE_NOTES.txt  UpdateInfo.cmake  Win32CMakeOptions-Sample.txt  WindowsEnvironmentSetup.html  astylert.bat  clean  clean.bat  clean.sh  com.rawtherapee.RawTherapee.appdata.xml  compile  header  languagePack.nsi  options.lin  options.win  rawtherapee.appdata.xml  rawtherapee.astylerc  rtinstaller.nsi  (+4 more)
rtdata/: CMakeLists.txt  mime-types  rawtherapee.desktop.in
rtdata/dcpprofiles/: CANON EOS 250D.dcp  CANON EOS 800D.dcp  CANON EOS M50.dcp  CANON EOS M6 MARK II.dcp  CANON EOS R.dcp  CANON EOS R6.dcp  CANON POWERSHOT G1 X MARK II.dcp  CANON POWERSHOT G5 X MARK II.dcp  Canon EOS 100D.dcp  Canon EOS 1300D.dcp  Canon EOS 20D.dcp  Canon EOS 400D.dcp  Canon EOS 40D.dcp  Canon EOS 450D.dcp  Canon EOS 50D.dcp  Canon EOS 5D Mark II.dcp  Canon EOS 5D Mark III.dcp  Canon EOS 5D Mark IV.dcp  Canon EOS 5D.dcp  Canon EOS 600D.dcp  Canon EOS 60D.dcp  Canon EOS 650D.dcp  Canon EOS 6D Mark II.dcp  Canon EOS 6D.dcp  Canon EOS 7D Mark II.dcp  Canon EOS 7D.dcp  Canon EOS 90D.dcp  Canon EOS D60.dcp  Canon EOS Digital Rebel XTi.dcp  Canon EOS Kiss X7.dcp  Canon EOS R5.dcp  Canon EOS RP.dcp  Canon EOS Rebel SL1.dcp  Canon EOS Rebel T2i.dcp  Canon EOS Rebel T3i.dcp  Canon EOS-1D Mark III.dcp  Canon EOS-1D X Mark III.dcp  Canon EOS-1Ds Mark II.dcp  Canon PowerShot G10.dcp  Canon PowerShot G12.dcp  (+145 more)
rtdata/iccprofiles/: Canon EOS 20D.icc
rtdata/icons/: mime-types  rawtherapee.desktop.in
rtdata/images/: deltags.pp2  rawtherapee_ico.xcf
rtdata/languages/: Catala  Chinese (Simplified)  Chinese (Traditional)  Czech  Danish  Dansk  Deutsch  English  English (UK)  English (US)  Espanol  Espanol (Castellano)  Espanol (Latin America)  Euskara  Francais  Greek  Hebrew  Italian  Italiano  Japanese  LICENSE  Latvian  Magyar  Nederlands  Norsk BM  Polish  Polish (Latin Characters)  Portugues  Portugues (Brasil)  README  Russian  Serbian (Cyrilic Characters)  Serbian (Latin Characters)  Slovak  Slovenian  Suomi  Swedish  Turkish  Ukrainian  default  (+1 more)
rtdata/options/: options.lin  options.osx  options.win
rtdata/osx/: Info.plist.in  executable_loader.in  macosx_bundle.sh  profile.icns  rawtherapee.icns
rtdata/profiles/: Auto-Matched Curve - ISO High.pp3  Auto-Matched Curve - ISO Low.pp3  Auto-Matched Curve - ISO Medium.pp3  BW 1.pp3  BW 2.pp3  BW 3.pp3  BW 4.pp3  BW-1.pp3  BW-1.xmp  BW-2.pp3  BW-2.xmp  BW-3.pp3  BW-3.xmp  BW-4.pp3  BW-4.xmp  Deep Shadows.pp3  Default ISO High.pp3  Default ISO Medium.pp3  Default-ISO-High.pp3  Default-ISO-Medium.pp3  Default.pp3  Equilibrated.pp3  Faded Amber 1 TM Bright.pp3  Faded Amber 1 TM.pp3  Faded Amber 1.pp3  Faded Blue 1 TM Bright.pp3  Faded Blue 1 TM.pp3  Faded Blue 1.pp3  Faded Blue Pink TM.pp3  Faded Blue Pink.pp3  Faded Chocolate 1 TM Bright.pp3  Faded Chocolate 2 TM Bright.pp3  Faded Golden 1.pp3  Faded Golden 2.pp3  Faded Green 1 TM Bright.pp3  Faded Green 1 TM.pp3  Faded Green 1.pp3  Faded Green 2.pp3  Faded Green 3.pp3  Faded Neutral TM.pp3  (+76 more)
rtdata/themes/: 01-Cookie-Dough.gtkrc  09-Gray-Orange.gtkrc  17-Gray-Red.gtkrc  21-Gray-Gray.gtkrc  21-Gray-Orange.gtkrc  21-Gray-Purple.gtkrc  21-Gray-Red.gtkrc  25-Gray-Gray.gtkrc  25-Gray-Purple.gtkrc  25-Gray-Purple.iconset  25-Gray-Red.gtkrc  37-Gray-Red-Textured.gtkrc  37-Gray-Red.gtkrc  63-Gray-Cyan.gtkrc  63-Gray-Cyan.iconset  92-Beige-DarkCyan.gtkrc  ClearLooks (Dark Orange)  Dark  Default  Default Slim  Default.gtkrc  Default.iconset  Focus  Focus Slim  Focus.gtkrc  Gray  Gray Textured  Light  RawTherapee - Legacy-GTK3-20_.css  RawTherapee - Legacy.css  RawTherapee-GTK3-20_.css  RawTherapee-GTK3-_19.css  RawTherapee-bak.css  RawTherapee.css  TooWaBlue - Bright-GTK3-20_.css  TooWaBlue - Bright.css  TooWaBlue - Dark-GTK3-20_.css  TooWaBlue - Dark.css  TooWaBlue-Bright-GTK3-20_.css  TooWaBlue-Dark-GTK3-20_.css  (+22 more)
rtdata/win/: readme.txt
rtengine/: CA_correct_RT.cc  CMakeCache.txt  CMakeLists.txt  Doxyfile  EdgePreserveLab.cc  EdgePreserveLab.h  EdgePreservingDecomposition.cc  EdgePreservingDecomposition.h  FTblockDN.cc  FTblockDNchroma.cc  HalideGenerator.cmake  KHC_YHC_demosaic.cpp  KHC_YHC_demosaic_halide.cpp  KHC_YHC_demosaic_halide.h  LUT.h  LibRaw.cmake  PF_correct_RT.cc  StopWatch.h  ahd_demosaic_RT.cc  alignedbuffer.h  alpha.cc  alpha.h  amaze_demosaic_RT.cc  amaze_interpolate_RT.cc  amaze_vng4_demosaic_RT.cc  array2D.h  ashift_dt.c  ashift_lsd.c  ashift_nmsimplex.c  badpixels.cc  bayer_bilinear_demosaic.cc  bilateral.cc  bilateral.h  bilateral2.cc  bilateral2.h  bilateral3.h  boxblur.cc  boxblur.h  boxblural.h  buffer.h  (+324 more)
rtengine/demosaic/: ahd.cc  amaze.cc  border.cc  dcb.cc  demosaic_algos.cc  dual.cc  eahd.cc  fast.cc  hphd.cc  igv.cc  lmmse.cc  markesteijn.cc  none.cc  pixelshift.cc  rcd.cc  vng4.cc  xtrans.cc
rtengine/halide/: HALIDE_LICENSE  (+2 more)
rtexif/: CMakeLists.txt  canonattribs.cc  fujiattribs.cc  kodakattribs.cc  nikonattribs.cc  olympusattribs.cc  panasonicattribs.cc  pentaxattribs.cc  rtexif.cc  rtexif.h  sonyminoltaattribs.cc  stdattribs.cc
rtgui/: CMakeCache.txt  CMakeLists.txt  addsetids.h  adjuster.cc  adjuster.h  alignedmalloc.cc  batchqueue.cc  batchqueue.h  batchqueuebuttonset  batchqueuebuttonset.cc  batchqueuebuttonset.h  batchqueueentry.cc  batchqueueentry.h  batchqueuepanel.cc  batchqueuepanel.h  batchtoolpanelcoord.cc  batchtoolpanelcoord.h  bayerpreprocess.cc  bayerpreprocess.h  bayerprocess.cc  bayerprocess.h  bayerrawexposure.cc  bayerrawexposure.h  blackwhite.cc  blackwhite.h  bqentryupdater.cc  bqentryupdater.h  browserfilter.cc  browserfilter.h  cacheimagedata.cc  cacheimagedata.h  cachemanager.cc  cachemanager.h  cacorrection.cc  cacorrection.h  checkbox.cc  checkbox.h  chmixer.cc  chmixer.h  chmixerbw.cc  (+382 more)
(+1128 files in other folders)
